# fate-dice

./: .gitignore  README.md  dune-project  fate.opam
lib/: dune  roll.ml  roll.mli
test/: dune
